<resources>
    <string name="app_name">Calculator_ex</string>
    <string name="record">기록</string>
    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="num9">9</string>
    <string name="num8">8</string>
    <string name="num7">7</string>
    <string name="num6">6</string>
    <string name="num5">5</string>
    <string name="num4">4</string>
    <string name="num3">3</string>
    <string name="num2">2</string>
    <string name="num1">1</string>
    <string name="num0">0</string>
    <string name="per">%</string>
    <string name="div">÷</string>
    <string name="mul">×</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="num00">00</string>
    <string name="back">BACK</string>
    <string name="delete">기록삭제</string>
</resources>
