<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="30sp"
        android:gravity="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text=""
        android:textSize="50sp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_view" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_record"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:layout_weight="1"
                android:background="@drawable/btn_4"
                android:text="@string/record"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_3"
                android:onClick="num"
                android:text="@string/clear"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:onClick="num"
                android:text="@string/div"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_per"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:onClick="num"
                android:text="@string/per"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_column="3"
                android:layout_weight="1"
                android:background="@drawable/btn_3"
                android:onClick="num"
                android:text="@string/backspace"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_num7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num8"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num9"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_mul"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:onClick="num"
                android:text="@string/mul"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_num4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num5"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num6"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:onClick="num"
                android:text="@string/add"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_num1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:onClick="num"
                android:text="@string/sub"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_num0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_num00"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/num00"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_comma"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1"
                android:onClick="num"
                android:text="@string/comma"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_2"
                android:onClick="num"
                android:text="@string/equal"
                android:textColor="@color/green"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>